Fixed metadata alignment in mgt-todo

--- a/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -166,8 +166,8 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
         flex: 1;
         display: grid;
         display: -ms-grid;
-        grid-template-columns: 1fr auto;
-        -ms-grid-columns: 1fr auto;
+        grid-template-columns: auto 1fr;
+        -ms-grid-columns: auto 1fr;
         grid-template-rows: auto auto auto auto;
         -ms-grid-rows: auto auto auto auto;
         justify-content: space-between;
@@ -219,18 +219,6 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
           -ms-grid-column: 2;
         }
 
-        .TaskAssignee {
-          grid-row: 3;
-          -ms-grid-row: 3;
-          grid-column: 1 / 3;
-          -ms-grid-column: 1;
-          -ms-grid-column-span: 2;
-
-          mgt-people {
-            --list-margin: 0;
-          }
-        }
-
         .TaskDue {
           justify-content: flex-end;
           align-items: flex-start;
@@ -243,8 +231,8 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
         }
 
         &.tablet {
-          grid-template-columns: 1fr auto auto auto;
-          -ms-grid-columns: 1fr auto auto auto;
+          grid-template-columns: 1fr 0.5fr 1fr 0.5fr;
+          -ms-grid-columns: 1fr 0.5fr 1fr 0.5fr;
           grid-template-rows: auto auto;
           -ms-grid-rows: auto auto;
 
